--- a/assets.qrc
+++ b/assets.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/images">
         <file>spicy.png</file>
         <file>close.png</file>
+        <file>play.png</file>
+        <file>settings.png</file>
     </qresource>
 </RCC>
