cleanup, new settings and settings dialog, ability to move game data, proper bt session shutdown, per game settings

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -123,6 +123,11 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>playButton</tabstop>
+  <tabstop>settingsButton</tabstop>
+  <tabstop>closeButton</tabstop>
+ </tabstops>
  <resources>
   <include location="assets.qrc"/>
  </resources>
