--- a/settingsdialog.ui
+++ b/settingsdialog.ui
@@ -119,7 +119,7 @@
        <item row="3" column="0" colspan="3">
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; color:#ff0000;&quot;&gt;We respecting your OS guidlines, we are running with user privileges and not trying to put game into system folders. So if you want to make something like that, make sure that you know what are you doing.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-family:'Tahoma,Sans Serif,Arial'; font-size:small; color:#ff0000;&quot;&gt;Spicy Horse respects your OS security guidelines. This program runs with user privileges and won't install into system folders. If you want to install elsewhere, you can set the &amp;quot;game directory&amp;quot; - but please be careful! Changing this setting can cause installation to fail without warning.&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="textFormat">
           <enum>Qt::RichText</enum>
@@ -226,7 +226,7 @@
        <item row="5" column="0" colspan="3">
         <widget class="QCommandLinkButton" name="debugLinkButton">
          <property name="text">
-          <string>Generate Debug data for support Team</string>
+          <string>Generate DEBUG data for support team.</string>
          </property>
          <property name="icon">
           <iconset resource="assets.qrc">
